--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="#">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" href="#">Work</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
           </li>
         </ul>
       </div>
@@ -34,7 +37,25 @@
   </nav>
 <!-- Navbar End -->
 
-
+<!-- Home Start -->
+<section id="home" class="home container">
+  <div class="row d-flex align-items-center">
+    <div class="col-8">
+      <h3 class="fw-semibold ">HI! I am</h3>
+      <h1 class="fw-bold ">Muhammad Yusuf</h1>
+      <p>I am Front End Developer based in Indonesia</p>
+      <a href="img/potrait.png" class="btn button" download>Resume</a>  
+    </div>
+    <div class="col-4">
+      <img src="img/potrait.png" alt="potrait">
+    </div>
+  </div>
+  <div class="arrow d-flex align-items-center flex-column">
+    <a class="text-decoration-none text-dark" href="#about">More Info</a>
+    <img src="img/arrow.svg" class="mt-2" id="arrow" alt="arrow">
+  </div>
+</section>
+<!-- Home End -->
 
 
 
