--- a/index.html
+++ b/index.html
@@ -57,6 +57,43 @@
 </section>
 <!-- Home End -->
 
+<!-- About Start -->
+<section id="about" class="about container">
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit optio commodi maiores expedita nam porro architecto nisi odio! Quam, illo. Soluta eius repellendus voluptates? Quaerat tempore aliquam sint nostrum architecto accusamus, ut sed excepturi dolores ipsa vero fuga perferendis unde delectus eos alias inventore sunt voluptas, deserunt id. Velit, voluptas.</p>
+  <div class="about-exp">
+    <div class="about-exp-item">
+      <div class="about-exp-item-header">
+      <div>
+      <h5>Software enginner</h5>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+    </div>
+    <button class="btn button" onclick="toggleDetail(event)">More Info</button>
+      </div>
+      <p class="about-exp-item-detail">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas, doloribus.</p>
+    </div>
+    <div class="about-exp-item">
+      <div class="about-exp-item-header">
+      <div>
+      <h5>Software enginner</h5>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+    </div>
+    <button class="btn button" onclick="toggleDetail(event)">More Info</button>
+      </div>
+      <p class="about-exp-item-detail d-none">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas, doloribus.</p>
+    </div>
+    <div class="about-exp-item">
+      <div class="about-exp-item-header">
+      <div>
+      <h5>Software enginner</h5>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+    </div>
+    <button class="btn button" onclick="toggleDetail(event)">More Info</button>
+      </div>
+      <p class="about-exp-item-detail d-none">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas, doloribus.</p>
+    </div>
+    </div>
+</section>
+<!-- About End -->
 
 
 
