--- a/index.html
+++ b/index.html
@@ -95,6 +95,29 @@
 </section>
 <!-- About End -->
 
+<!-- Work start -->
+
+  <section id="work" class="container work">
+<div class="row d-flex align-items-center">
+  <div class="col">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda suscipit consequatur, accusantium repellat voluptate quas excepturi sed ad libero exercitationem error natus, omnis explicabo eum.</p>
+  </div>
+  <div class="col work-img">
+    <div id="work-1" class="work-img-item">
+      <img src="img/work-1.png" alt="work-1">  
+    </div>
+    <div id="work-2" class="work-img-item">
+      <img src="img/work-2.png" alt="work-2">  
+    </div>
+    <div id="work-3" class="work-img-item">
+      <img src="img/work-3.png" alt="work-3">  
+    </div>
+  </div>
+</div>
+  </section>
+<!-- Work end -->
+
+
 
 
 
